[project]
name = "newsdesk-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.21.0",
    "openai>=1.70.0",
    "pymupdf4llm>=0.0.19",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.3",
    "tiktoken>=0.9.0",
]
